# NVDARemoteCompanion

./: CMakeLists.txt  README.md  sample_config.json
.github/workflows/: build-release.yml
android/: .gitignore  gradlew  local.properties.template  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/sounds/: README.txt
android/app/src/main/cpp/: AndroidAudio.cpp  AndroidAudio.h  AndroidBridge.cpp  AndroidClipboard.cpp  AndroidClipboard.h  AndroidSpeech.cpp  AndroidSpeech.h  CMakeLists.txt
android/app/src/main/cpp/DirectTts/: AaudioPlayer.cpp  AaudioPlayer.h  DirectTtsEngine.h  RuTtsEngine.cpp  RuTtsEngine.h
android/app/src/main/java/org/gozaltech/nvdaremotecompanion/android/: AboutTab.java  AppPrefs.java  BaseActivity.java  BootReceiver.java  ConnectionService.java  Event.java  InstallResultReceiver.java  KeyMapper.java  MainActivity.java  MainViewModel.java  NativeBridge.java  NvdaAudioManager.java  NvdaRemoteAccessibilityService.java  ProfileEditActivity.java  ProfileEditViewModel.java  ProfileFormData.java  ProfileRepository.java  ProfileUiState.java  ProfilesTab.java  SettingsTab.java  TtsManager.java  UpdateChecker.java  UpdateDialog.java  UpdateInfo.java  UpdateInstaller.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-ru/: strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  file_paths.xml
android/gradle/: libs.versions.toml
src/: AppState.cpp  AppState.h  Audio.cpp  Audio.h  Clipboard.cpp  Clipboard.h  CommandHandler.cpp  CommandHandler.h  Config.h  ConfigFile.cpp  ConfigFile.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionState.h  Debug.cpp  Debug.h  EventChecker.cpp  EventChecker.h  Input.cpp  Input.h  KeyEvent.h  KeyboardHandler.cpp  KeyboardHandler.h  KeyboardHook.cpp  KeyboardHook.h  KeyboardState.cpp  KeyboardState.h  LinuxKeyboardGrab.cpp  LinuxKeyboardGrab.h  MessageSender.cpp  MessageSender.h  NetworkClient.cpp  NetworkClient.h  SSLClient.cpp  SSLClient.h  Speech.cpp  Speech.h  ThreadManager.h  TrayIcon.cpp  TrayIcon.h  (+1 more)
